fix: force code blocks with long lines to wrap

--- a/src/_includes/assets/styles/layout/base.scss
+++ b/src/_includes/assets/styles/layout/base.scss
@@ -1,3 +1,7 @@
+pre, code {
+  white-space: pre-wrap;
+}
+
 main {
   width: 100%;
   margin: 0 auto;
